--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Tyler and Jakson's Not Art Gallery</title>
+        <title>Tyler and [redacted]'s Not Art Gallery</title>
         <link rel="stylesheet" href="main.css" />
     </head>
     <body>
         <div id="main">
             <div id="topstuff">
-                <h1>Tyler and Jakson's Not Art Gallery</h1>
+                <h1>Tyler and [redacted]'s Not Art Gallery</h1>
                 <p>
-                    A gallery for stuff that isn't art. We've made it all very carefully to be unnappealing and deranged. All the art here is certified awful, courtesy of Tyler Clarke and Jakson Vermillion.
+                    A gallery for stuff that isn't art. We've made it all very carefully to be unnappealing and deranged. All the art here is certified awful, courtesy of Tyler Clarke and [redacted].
                 </p>
             </div>
             <div class="gradient-up"></div>
