--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
                 <div class = "image">
                     <img src="res/psst hey kid wanna buy some modern art.png"/>
                 </div>
+                <div class = "image">
+                    <img src="res/he does it again m'folkies.png"/>
+                </div>
+                <div class = "image">
+                    <img src="res/cowhide rap4.png"/>
+                </div>
+                <div class = "image">
+                    <img src="res/copy-pasted-squishmallows.png"/>
+                </div>
             </div>
         </div>
         <div id="shadowbox" class="hidden">
