--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <body>
         <div id="main">
             <div id="topstuff">
-                <h1>Tyler and [redacted]'s Not Art Gallery</h1>
+                <h1>Tyler and Grant's Not Art Gallery</h1>
+                <h2>
+                    A gallery for stuff that isn't art.
+                </h2>
                 <p>
-                    A gallery for stuff that isn't art. We've made it all very carefully to be unnappealing and deranged. All the art here is certified awful, courtesy of Tyler Clarke and [redacted].
+                    This ridiculous idea began when I sent Grant Rajesh (of 1000D) some pieces of "art" I'd made in GIMP that were distinctly mocking modern art. He suggested I set up a website, so I did, and now you have your monstrosity here.
+                </p>
+                <p>
+                    This is a no-judgement, no-expectations art form. We're putting <i>anything</i> here, so while this website will remain child-appropriate, it may not be child-accessible (we don't care if kids nod their heads knowingly and pass out for confusion when they read it).
                 </p>
             </div>
             <div class="gradient-up"></div>
@@ -22,13 +28,22 @@
                     <img src="res/psst hey kid wanna buy some modern art.png"/>
                 </div>
                 <div class = "image">
-                    <img src="res/he does it again m'folkies.png"/>
+                    <img src="res/another-brilliant-piece.jpg"/>
+                </div>
+                <div class = "image">
+                    <img src="res/he does it again, m'folkies.png"/>
                 </div>
                 <div class = "image">
                     <img src="res/cowhide rap4.png"/>
                 </div>
                 <div class = "image">
+                    <img src="res/sneezed-on-this-too.jpg"/>
+                </div>
+                <div class = "image">
                     <img src="res/copy-pasted-squishmallows.png"/>
+                </div>
+                <div class = "image">
+                    <img src="res/hat art.png"/>
                 </div>
             </div>
         </div>
