--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Tyler and [redacted]'s Not Art Gallery</title>
+        <title>Tyler and Grant's Not Art Gallery</title>
         <link rel="stylesheet" href="main.css" />
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="og:image" content="res/he does it again, m'folkies.png" />
+        <meta name="og:title" content="Tyler and Grant's Not Art Gallery" />
+        <meta name="og:url" content="https://linuxrocks2000.github.io/not-art-gallery" />
+        <meta name="og:description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh" />
+        <meta name="og:type" content="article" />
     </head>
     <body>
         <div id="main">
@@ -13,7 +19,7 @@
                     A gallery for stuff that isn't art.
                 </h2>
                 <p>
-                    This ridiculous idea began when I sent Grant Rajesh (of 1000D) some pieces of "art" I'd made in GIMP that were distinctly mocking modern art. He suggested I set up a website, so I did, and now you have your monstrosity here.
+                    This ridiculous idea began when I (Tyler Clarke, author + artist of <a href="https://linuxrocks2000.github.io/">LinuxRocks2000</a>) sent Grant Rajesh (of <a href = "https://brucewallenstein.github.io/1000D">1000D</a>) some pieces of "art" I'd made in GIMP that were distinctly mocking modern art. He suggested I set up a website, so I did, and now you have your monstrosity here.
                 </p>
                 <p>
                     This is a no-judgement, no-expectations art form. We're putting <i>anything</i> here, so while this website will remain child-appropriate, it may not be child-accessible (we don't care if kids nod their heads knowingly and pass out for confusion when they read it).
