Well I may have completely screwed it up but it's all better now

--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
 
         <!-- HTML Meta Tags -->
         <title>Tyler and Grant's Not Art Gallery</title>
-        <meta name="description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh">
+        <meta name="description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh" />
 
         <!-- Facebook Meta Tags -->
-        <meta property="og:url" content="https://linuxrocks2000.github.io/not-art-gallery">
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="Tyler and Grant's Not Art Gallery">
-        <meta property="og:description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh">
-        <meta property="og:image" content="https://linuxrocks2000.github.io/res/he does it again, m'folkies.png">
+        <meta property="og:url" content="https://linuxrocks2000.github.io/not-art-gallery" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Tyler and Grant's Not Art Gallery" />
+        <meta property="og:description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh" />
+        <meta property="og:image" content="https://linuxrocks2000.github.io/res/he does it again, m'folkies.png" />
 
         <!-- Twitter Meta Tags -->
-        <meta name="twitter:card" content="summary_large_image">
-        <meta property="twitter:domain" content="linuxrocks2000.github.io">
-        <meta property="twitter:url" content="https://linuxrocks2000.github.io/not-art-gallery">
-        <meta name="twitter:title" content="Tyler and Grant's Not Art Gallery">
-        <meta name="twitter:description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh">
-        <meta name="twitter:image" content="https://linuxrocks2000.github.io/res/he does it again, m'folkies.png">
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="twitter:domain" content="linuxrocks2000.github.io" />
+        <meta property="twitter:url" content="https://linuxrocks2000.github.io/not-art-gallery" />
+        <meta name="twitter:title" content="Tyler and Grant's Not Art Gallery" />
+        <meta name="twitter:description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh" />
+        <meta name="twitter:image" content="https://linuxrocks2000.github.io/res/he does it again, m'folkies.png" />
 
         <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+        <link rel="stylesheet" href="main.css" />
     </head>
     <body>
         <div id="main">
