I really don't like opengraph.xyz now.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <!-- Facebook Meta Tags -->
         <meta property="og:url" content="https://linuxrocks2000.github.io/not-art-gallery">
-        <meta property="og:type" content="website">
+        <meta property="og:type" content="article">
         <meta property="og:title" content="Tyler and Grant's Not Art Gallery">
         <meta property="og:description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh">
         <meta property="og:image" content="https://linuxrocks2000.github.io/not-art-gallery/res/he does it again, m'folkies.png">
