--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:type" content="article">
         <meta property="og:title" content="Tyler and Grant's Not Art Gallery">
         <meta property="og:description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh">
-        <meta property="og:image" content="https://linuxrocks2000.github.io/not-art-gallery/res/he does it again, m'folkies.png">
+        <meta property="og:image" content="https://linuxrocks2000.github.io/not-art-gallery/res/he%20does%20it%20again%2C%20m%27folkies.png">
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
@@ -20,7 +20,7 @@
         <meta property="twitter:url" content="https://linuxrocks2000.github.io/not-art-gallery">
         <meta name="twitter:title" content="Tyler and Grant's Not Art Gallery">
         <meta name="twitter:description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh">
-        <meta name="twitter:image" content="https://linuxrocks2000.github.io/not-art-gallery/res/he does it again, m'folkies.png">
+        <meta name="twitter:image" content="https://linuxrocks2000.github.io/not-art-gallery/res/he%20does%20it%20again%2C%20m%27folkies.png">
 
         <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
