--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>
                     This is a no-judgement, no-expectations art form. We're putting <i>anything</i> here, so while this website will remain child-appropriate, it may not be child-accessible (we don't care if kids nod their heads knowingly and pass out for confusion when they read it).
                 </p>
-                <span style="font-family:monospace;color:green;background-color:lightblue;">[Scroll Down]</span>
+                <span id="bouncy" style="font-family:monospace;color:green;background-color:lightblue;">[Scroll Down]</span>
             </div>
             <div class="gradient-scrolly"></div>
             <div id="carousel" onmouseover = "carouselHovered()" onmouseleave = "carouselUnhovered()">
