post some more art

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                     <img src="res/he does it again, m'folkies.png"/>
                 </div>
                 <div class = "image">
+                    <img src="res/greatest-colorblind-art.jpg"/>
+                </div>
+                <div class = "image">
                     <img src="res/cowhide rap4.png"/>
                 </div>
                 <div class = "image">
