added a credit. it looks good.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
                 </p>
                 <span id="bouncy" style="font-family:monospace;color:green;background-color:lightblue;">[Scroll Down]</span>
             </div>
-            <div class="gradient-scrolly"></div>
+            <div class="gradient-scrolly">
+                <div id="cred">
+                    Site designed and developed by Tyler Clarke<br>
+                    <span>Art by Tyler Clarke and Grant Rajesh</span><br>
+                    Initial idea by Grant Rajesh
+                </div>
+            </div>
             <div id="carousel" onmouseover = "carouselHovered()" onmouseleave = "carouselUnhovered()">
                 <div class = "image">
                     <img src="res/a very deep work.png"/>
