Improve some images

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="res/psst hey kid wanna buy some modern art.png"/>
                 </div>
                 <div class = "image">
-                    <img src="res/another-brilliant-piece.jpg"/>
+                    <img src="res/yep.png"/>
                 </div>
                 <div class = "image">
                     <img src="res/he does it again, m'folkies.png"/>
@@ -71,7 +71,7 @@
                     <img src="res/cowhide rap4.png"/>
                 </div>
                 <div class = "image">
-                    <img src="res/sneezed-on-this-too.jpg"/>
+                    <img src="res/Truth.png"/>
                 </div>
                 <div class = "image">
                     <img src="res/copy-pasted-squishmallows.png"/>
