Stacked tissue boxes on the sea of galilee

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                 <div class = "image">
                     <img src="res/creative-green-circle.jpg"/>
                 </div>
+                <div class = "image">
+                    <img src="res/stacked-tissue-boxes.png"/>
+                </div>
             </div>
         </div>
         <div id="shadowbox" class="hidden">
