Update more art

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <img src="res/he does it again, m'folkies.png"/>
                 </div>
                 <div class = "image">
-                    <img src="res/greatest-colorblind-art.jpg"/>
+                    <img src="res/Scribbles.png"/>
                 </div>
                 <div class = "image">
                     <img src="res/cowhide rap4.png"/>
@@ -80,7 +80,7 @@
                     <img src="res/hat art.png"/>
                 </div>
                 <div class = "image">
-                    <img src="res/creative-green-circle.jpg"/>
+                    <img src="res/creative.png"/>
                 </div>
                 <div class = "image">
                     <img src="res/stacked-tissue-boxes.png"/>
