Says About Society

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                 <div class = "image">
                     <img src="res/stacked-tissue-boxes.png"/>
                 </div>
+                <div class = "image">
+                    <img src="res/says-about-society.png"/>
+                </div>
             </div>
         </div>
         <div id="shadowbox" class="hidden">
