haha just kidding, you don't get to use your scrollbar or your arrow keys

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>
                     (And, honestly, it's probably gonna be adult members of society who can't get what this is all about).
                 </p>
-                <span id="bouncy" style="font-family:monospace;color:green;background-color:lightblue;">[Scroll Down (two finger scroll for best effect)]</span>
+                <span id="bouncy" style="font-family:monospace;color:green;background-color:lightblue;">[Scroll Down (two fingers)]</span>
             </div>
             <div class="gradient-scrolly">
                 <div id="cred">
