even more you must be kidding me there's a lot of this now

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                     <img src="res/psst hey kid wanna buy some modern art.png"/>
                 </div>
                 <div class = "image">
+                    <img src="res/modern art.png"/>
+                </div>
+                <div class = "image">
                     <img src="res/yep.png"/>
                 </div>
                 <div class = "image">
@@ -87,6 +90,9 @@
                 </div>
                 <div class = "image">
                     <img src="res/stacked-tissue-boxes.png"/>
+                </div>
+                <div class = "image">
+                    <img src="res/Self portrait .png"/>
                 </div>
                 <div class = "image">
                     <img src="res/says-about-society.png"/>
