--- a/index.html
+++ b/index.html
@@ -53,51 +53,67 @@
             </div>
             <div id="carousel" onmouseover = "carouselHovered()" onmouseleave = "carouselUnhovered()">
                 <div class = "image">
+                    Piece by Tyler Clarke
                     <img src="res/a very deep work.png"/>
                 </div>
                 <div class = "image">
-                    <img src="res/psst hey kid wanna buy some modern art.png"/>
-                </div>
-                <div class = "image">
+                    Piece by Grant Rajesh
                     <img src="res/modern art.png"/>
                 </div>
                 <div class = "image">
+                    Piece by Tyler Clarke
+                    <img src="res/psst hey kid wanna buy some modern art.png"/>
+                </div>
+                <div class = "image">
+                    Piece by Grant Rajesh
                     <img src="res/yep.png"/>
                 </div>
                 <div class = "image">
+                    Piece by Tyler Clarke
                     <img src="res/he does it again, m'folkies.png"/>
                 </div>
                 <div class = "image">
+                    Piece by Tyler Clarke
                     <img src="res/dipping water.png"/>
                 </div>
                 <div class = "image">
+                    Piece by Grant Rajesh
                     <img src="res/Scribbles.png"/>
                 </div>
                 <div class = "image">
+                    Piece by Tyler Clarke
                     <img src="res/cowhide rap4.png"/>
                 </div>
                 <div class = "image">
+                    Piece by Grant Rajesh
                     <img src="res/Truth.png"/>
                 </div>
                 <div class = "image">
+                    Piece by Tyler Clarke
                     <img src="res/copy-pasted-squishmallows.png"/>
                 </div>
                 <div class = "image">
+                    Piece by Tyler Clarke
                     <img src="res/hat art.png"/>
                 </div>
                 <div class = "image">
+                    Piece by Grant Rajesh
                     <img src="res/creative.png"/>
                 </div>
                 <div class = "image">
+                    Piece by Tyler Clarke
                     <img src="res/stacked-tissue-boxes.png"/>
                 </div>
                 <div class = "image">
+                    Piece by Grant Rajesh
                     <img src="res/Self portrait .png"/>
                 </div>
                 <div class = "image">
+                    Piece by Tyler Clarke
                     <img src="res/says-about-society.png"/>
                 </div>
                 <div class = "image">
+                    Piece by Tyler Clarke
                     <img src="res/looking impressive standing next to it.png"/>
                 </div>
             </div>
