whoops forgot to add the latest art

--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
                     Piece by Tyler Clarke
                     <img src="res/looking impressive standing next to it.png"/>
                 </div>
+                <div class = "image">
+                    Piece by Tyler Clarke
+                    <img src="res/sky or waves_.png"/>
+                </div>
             </div>
             <div class="gradient-down" style="z-index: 1;position:relative;"></div>
             <div id="understuff" style="z-index: 2;position:relative;">
