--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <img src="res/looking impressive standing next to it.png"/>
                 </div>
                 <div class = "image">
-                    Piece by Tyler Clarke
+                    Piece by Grant Rajesh
                     <img src="res/sky or waves_.png"/>
                 </div>
             </div>
