--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div id="cred">
                 Site designed and developed by Tyler Clarke<br>
-                <span>Art by Tyler Clarke and Grant Rajesh</span><br>
+                <span>Art by Tyler Clarke, Grant Rajesh, and others</span><br>
                 Initial idea by Grant Rajesh
             </div>
             <div id="carousel" onmouseover = "carouselHovered()" onmouseleave = "carouselUnhovered()">
