--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class = "image">
                     Piece by Ethan Clarke
-                    <img src "res/Acetone.png"/>
+                    <img src="res/Acetone.png"/>
                 </div>
                 <div class = "image">
                     Piece by Grant Rajesh
