--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
                     Piece by Grant Rajesh
                     <img src="res/sky or waves_.png"/>
                 </div>
+                <div class = "image">
+                    Piece by Grant Rajesh
+                    <img src="res/copy pasted rectangles gimp.png"/>
+                </div>
             </div>
             <div class="gradient-down" style="z-index: 1;position:relative;"></div>
             <div id="understuff" style="z-index: 2;position:relative;">
