Keep getting them mixed up Tye.
Please get some sleep

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <img src="res/sky or waves_.png"/>
                 </div>
                 <div class = "image">
-                    Piece by Grant Rajesh
+                    Piece by Tyler Clarke
                     <img src="res/copy pasted rectangles gimp.png"/>
                 </div>
             </div>
