--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
                     Piece by Tyler Clarke
                     <img src="res/copy pasted rectangles gimp.png"/>
                 </div>
+                <div class = "image">
+                    Piece by Grant Rajesh
+                    <img src="res/boredom_.png"/>
+                </div>
             </div>
             <div class="gradient-down" style="z-index: 1;position:relative;"></div>
             <div id="understuff" style="z-index: 2;position:relative;">
