ya welcome Digin

--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
                     Piece by Grant Rajesh
                     <img src="res/boredom_.png"/>
                 </div>
+                <div class = "image">
+                    Piece by Digin
+                    <img src="res/digin-downscaled-man.png">
+                </div>
             </div>
             <div class="gradient-down" style="z-index: 1;position:relative;"></div>
             <div id="understuff" style="z-index: 2;position:relative;">
