--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
                     Piece by Digin
                     <img src="res/digin-downscaled-man.png">
                 </div>
+                <div class = "image">
+                    Piece by Grant Rajesh
+                    <img src="res/no-fun.png">
+                </div>
             </div>
             <div class="gradient-down" style="z-index: 1;position:relative;"></div>
             <div id="understuff" style="z-index: 2;position:relative;">
