--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
                     Piece by Grant Rajesh
                     <img src="res/no-fun.png">
                 </div>
+                <div class = "image">
+                    Piece by Grant Rajesh
+                    <img src="res/flash drive.jpg">
+                </div>
             </div>
             <div class="gradient-down" style="z-index: 1;position:relative;"></div>
             <div id="understuff" style="z-index: 2;position:relative;">
