--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <!-- HTML Meta Tags -->
         <title>Tyler and Grant's Not Art Gallery</title>
         <meta name="description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh">
+        <meta name="keywords" content="Tyler Clarke">
 
         <!-- Facebook Meta Tags -->
         <meta property="og:url" content="https://linuxrocks2000.github.io/not-art-gallery">
