--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     A gallery for stuff that isn't art.
                 </h2>
                 <p>
-                    This ridiculous idea began when I (Tyler Clarke, author + artist of <a href="https://linuxrocks2000.github.io/">LinuxRocks2000</a>) sent Grant Rajesh (of <a href = "https://brucewallenstein.github.io/1000D">1000D</a>) some pieces of "art" I'd made in GIMP that were distinctly mocking modern art. He suggested I set up a website, so I did, and now you have your monstrosity here.
+                    This ridiculous idea began when I (Tyler Clarke, author + artist of <a href="https://linuxrocks2000.github.io/">LinuxRocks2000</a>) sent Jakson Vermillion (alias Grant Rajesh, of <a href = "https://brucewallenstein.github.io/1000D">1000D</a>) some pieces of "art" I'd made in GIMP that were distinctly mocking modern art. He suggested I set up a website, so I did, and now you have your monstrosity here.
                 </p>
                 <p>
                     This is a no-judgement, no-expectations art form. We're putting <i>anything</i> here, so while this website will remain child-appropriate, it may not be child-accessible (we don't care if kids nod their heads knowingly and pass out for confusion when they read it).
@@ -49,8 +49,8 @@
             </div>
             <div id="cred">
                 Site designed and developed by Tyler Clarke<br>
-                <span>Art by Tyler Clarke, Grant Rajesh, and others</span><br>
-                Initial idea by Grant Rajesh
+                <span>Art by Tyler Clarke, Jakson Vermillion, and others</span><br>
+                Initial idea by Jakson Vermillion
             </div>
             <div id="carousel" onmouseover = "carouselHovered()" onmouseleave = "carouselUnhovered()">
                 <div class = "image">
@@ -58,7 +58,7 @@
                     <img src="res/a very deep work.png"/>
                 </div>
                 <div class = "image">
-                    Piece by Grant Rajesh
+                    Piece by Jakson Vermillion
                     <img src="res/modern art.png"/>
                 </div>
                 <div class = "image">
@@ -66,7 +66,7 @@
                     <img src="res/psst hey kid wanna buy some modern art.png"/>
                 </div>
                 <div class = "image">
-                    Piece by Grant Rajesh
+                    Piece by Jakson Vermillion
                     <img src="res/yep.png"/>
                 </div>
                 <div class = "image">
@@ -78,7 +78,7 @@
                     <img src="res/dipping water.png"/>
                 </div>
                 <div class = "image">
-                    Piece by Grant Rajesh
+                    Piece by Jakson Vermillion
                     <img src="res/Scribbles.png"/>
                 </div>
                 <div class = "image">
@@ -86,7 +86,7 @@
                     <img src="res/cowhide rap4.png"/>
                 </div>
                 <div class = "image">
-                    Piece by Grant Rajesh
+                    Piece by Jakson Vermillion
                     <img src="res/Truth.png"/>
                 </div>
                 <div class = "image">
@@ -98,7 +98,7 @@
                     <img src="res/hat art.png"/>
                 </div>
                 <div class = "image">
-                    Piece by Grant Rajesh
+                    Piece by Jakson Vermillion
                     <img src="res/creative.png"/>
                 </div>
                 <div class = "image">
@@ -106,7 +106,7 @@
                     <img src="res/stacked-tissue-boxes.png"/>
                 </div>
                 <div class = "image">
-                    Piece by Grant Rajesh
+                    Piece by Jakson Vermillion
                     <img src="res/Self portrait .png"/>
                 </div>
                 <div class = "image">
@@ -122,7 +122,7 @@
                     <img src="res/Acetone.png"/>
                 </div>
                 <div class = "image">
-                    Piece by Grant Rajesh
+                    Piece by Jakson Vermillion
                     <img src="res/sky or waves_.png"/>
                 </div>
                 <div class = "image">
@@ -130,7 +130,7 @@
                     <img src="res/copy pasted rectangles gimp.png"/>
                 </div>
                 <div class = "image">
-                    Piece by Grant Rajesh
+                    Piece by Jakson Vermillion
                     <img src="res/boredom_.png"/>
                 </div>
                 <div class = "image">
@@ -138,11 +138,11 @@
                     <img src="res/digin-downscaled-man.png">
                 </div>
                 <div class = "image">
-                    Piece by Grant Rajesh
+                    Piece by Jakson Vermillion
                     <img src="res/no-fun.png">
                 </div>
                 <div class = "image">
-                    Piece by Grant Rajesh
+                    Piece by Jakson Vermillion
                     <img src="res/flash drive.jpg">
                 </div>
             </div>
