--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
         <meta charset="utf-8">
 
         <!-- HTML Meta Tags -->
-        <title>Tyler and Grant's Not Art Gallery</title>
-        <meta name="description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh">
+        <title>Tyler and Jakson's Not Art Gallery</title>
+        <meta name="description" content="A not-modern-art gallery made by Tyler Clarke and Jakson Vermillion">
         <meta name="keywords" content="Tyler Clarke">
 
         <!-- Facebook Meta Tags -->
         <meta property="og:url" content="https://linuxrocks2000.github.io/not-art-gallery">
         <meta property="og:type" content="article">
-        <meta property="og:title" content="Tyler and Grant's Not Art Gallery">
-        <meta property="og:description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh">
+        <meta property="og:title" content="Tyler and Jakson's Not Art Gallery">
+        <meta property="og:description" content="A not-modern-art gallery made by Tyler Clarke and Jakson Vermillion">
         <meta property="og:image" content="https://linuxrocks2000.github.io/not-art-gallery/res/he%20does%20it%20again%2C%20m%27folkies.png">
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta property="twitter:domain" content="linuxrocks2000.github.io">
         <meta property="twitter:url" content="https://linuxrocks2000.github.io/not-art-gallery">
-        <meta name="twitter:title" content="Tyler and Grant's Not Art Gallery">
-        <meta name="twitter:description" content="A not-modern-art gallery made by Tyler Clarke and Grant Rajesh">
+        <meta name="twitter:title" content="Tyler and Jakson's Not Art Gallery">
+        <meta name="twitter:description" content="A not-modern-art gallery made by Tyler Clarke and Jakson Vermillion">
         <meta name="twitter:image" content="https://linuxrocks2000.github.io/not-art-gallery/res/he%20does%20it%20again%2C%20m%27folkies.png">
 
         <!-- Meta Tags Generated via https://www.opengraph.xyz -->
